tests/sema/fail/v3_fail_return_type.ep
# COMPILE_FAIL: return expected str, got i64

fun main(): str {
    return 1
}
